# plex_anime_manager

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: flash.rs  lib.rs
app/static/css/: style.css
app/templates/: edit.html.tera  index.html.tera  layout.html.tera
entity/: Cargo.toml
entity/src/: anime.rs  lib.rs  mod.rs  plex_event.rs  prelude.rs  watched_episodes.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240305_141836_create_anime.rs  m20240305_142140_create_watched_episodes.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
